@@ -373,3 +373,6 @@ July 6, 2004: recognize fields in pcfs_args_t in FreeBSD 5.
 
 * Dan Nelson <dnelson@allantgroup.com>
 August 2, 2004: pawd to recognize "host" type mounts.
+
+* Hauke Fath <hauke@Espresso.Rhein-Neckar.DE>
+August 3, 2004: pawd to recognize "linkx" type mounts.
